--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@ant-design/pro-components": "^2.7.10",
-    "@arms/js-sdk": "1.8.36-beta.13",
-    "@umijs/max": "^4.2.11",
+    "@arms/rum-browser": "0.0.27-beta.9",
+    "@umijs/max": "^4.3.15",
     "antd": "^5.4.0"
   },
   "devDependencies": {
